<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="stock_hawk">Stock Hawk</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="make_your_app_material">Make Your App Material</string>
    <string name="go_ubiquitous">Go Ubiquitous</string>
    <string name="capstone">Capstone</string>
    <string name="capstone_string">This button will launch my Capstone app</string>
    <string name="ubiquitous_String">This button will launch my Go Ubiquitous app</string>
    <string name="make_your_app">This button will launch my Make Your App Material app</string>
    <string name="build_itbigger">This button will launch my Build It Bigger app</string>
    <string name="stock_hawk_string">This button will launch my Stock Hawk app</string>
    <string name="popular_movies_string">This button will launch my Popular Movies app</string>
    <string name="my_nanodegree_apps">My Nanodegree Apps!</string>
</resources>