<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.codepeaker.myappportfoilio.MainActivity">

    <TextView
        android:layout_width="@dimen/width_200"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/my_nanodegree_apps"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_20" />

    <Button
        style="@style/mainStyle"
        android:id="@+id/popular_movies"
        android:onClick="onClick"
        android:text="@string/popular_movies" />

    <Button
        style="@style/mainStyle"
        android:id="@+id/stock_hawk"
        android:onClick="onClick"
        android:text="@string/stock_hawk" />

    <Button
        style="@style/mainStyle"
        android:id="@+id/bulid_it_bigger"
        android:onClick="onClick"
        android:text="@string/build_it_bigger" />

    <Button
        style="@style/mainStyle"
        android:id="@+id/make_your_app_material"
        android:onClick="onClick"
        android:text="@string/make_your_app_material" />

    <Button
        style="@style/mainStyle"
        android:id="@+id/go_ubiquitous"
        android:onClick="onClick"
        android:text="@string/go_ubiquitous" />

    <Button
        style="@style/mainStyle"
        android:id="@+id/capstone"
        android:onClick="onClick"
        android:text="@string/capstone" />
</LinearLayout>